add TransactionTypeController and VaultController